--- a/index.html
+++ b/index.html
@@ -1,4 +1,10 @@
-<title>Martins Sida</title>
+<!DOCTYPE html>
+<html>
+<head>
+<title class="creator"></title>
+<script src="static/js/script.js" defer></script>
+</head>
 <body>
-    <h1>Martins Sida</h1>
+    <h1 id="creator"></h1>
 </body>
+</html>
